# scifit

./: .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .pylintrc  .readthedocs.yaml  AUTHORS  CHANGES.md  Dockerfile  LICENSE  LICENSE_bundled  MANIFEST.in  README.md  TODO.md  noxfile.py  pyproject.toml  requirements.txt  requirements_ci.txt  setup.py
.github/workflows/: docs.yaml  pypi.yaml  quality.yaml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/media/schemas/: FitSolver.graphml
docs/source/notebooks/: QuickStartGuide01.ipynb  QuickStartGuide02.ipynb  QuickStartGuide03.ipynb  introduction.ipynb
docs/source/notebooks/book/: Chi2Test.ipynb  Distributions.ipynb  chi2table.csv
docs/source/notebooks/book/figures/: chi2dist.eps  chi2gendist.eps  chi2test.eps
docs/source/notebooks/checks/: BadLinFit.ipynb  Banner.ipynb  CarreauYusadaFit.ipynb  CatHet.ipynb  CatHet2.ipynb  CatHet3.ipynb  CatHetChecker.ipynb  CheckInterface01.ipynb  Check_HillPlots.ipynb  Check_Interface01.ipynb  Check_WierdModel.ipynb  ChromatoPeaks.ipynb  CosHyperbolicTwoPole.ipynb  Covariance.ipynb  Covariance2.ipynb  CreateSyntheticDatasets.ipynb  Derivative.ipynb  Diabetes.ipynb  EffectNoiseAndPoints.ipynb  FindPeaksBaseLimitIssue.ipynb  GPR_CI.ipynb  GradientDescent-Copy1.ipynb  GradientDescent.ipynb  Jacobian.ipynb  LogNormFit.ipynb  LogNormFit2.ipynb  LogNormFit3.ipynb  Minimize.ipynb  ODETimeResolution.ipynb  Outliers.ipynb  OverCoupled.ipynb  PowerLaw.ipynb  PowerLaw2.ipynb  RiceFit.ipynb  RiceFit2.ipynb  RiceFit3.ipynb  RiceFit4.ipynb  RobustRegression.ipynb  SVR_Fit.ipynb  ScoreModelvsConstant.ipynb  (+12 more)
docs/source/notebooks/checks/data/: LinearCalibration.csv  cathet.csv  cathet2.csv  parabolic.csv  peaks_01.csv  pima-indians-diabetes.csv  test.csv
docs/source/notebooks/checks/fft/: 01_Introduction.ipynb
docs/source/notebooks/demos/: Demo01.ipynb  Demo02.ipynb  Demo03.ipynb
docs/source/notebooks/docs/: Demo.ipynb  QuickStartGuide01.ipynb  QuickStartGuide02.ipynb  QuickStartGuide03.ipynb  QuickStartGuide04.ipynb  QuickStartGuide05.ipynb  QuickStartGuide06.ipynb  QuickStartGuide07.ipynb  QuickStartGuide08.ipynb  QuickStartGuide09.ipynb  QuickStartGuide10.ipynb  QuickStartGuide11.ipynb  QuickStartGuide12.ipynb
docs/source/notebooks/docs/data/: MichaelisMentenKinetic.csv  ParabolicRegression.csv  RaneyKetonDehydrogenation.csv
docs/source/notebooks/fsolve/: AcidBaseSolver.ipynb  AcidBaseSolver2.ipynb  AcidBaseSolverClass3.ipynb
docs/source/notebooks/minimize/: PolyMin.ipynb
docs/source/pages/: errors.rst  installation.rst  interfaces.rst  quickstart.rst  service.rst  settings.rst  solvers.rst
scifit/: __init__.py
scifit/errors/: base.py
scifit/interfaces/: __init__.py  generic.py  kinetics.py  mixins.py  solvers.py  specials.py
scifit/solvers/: __init__.py  chromatography.py  illdefined.py  kinetics.py  linear.py  scientific.py  specials.py  spectroscopy.py
scifit/tests/: helpers.py  test_fixed_issues.py  test_interfaces.py  test_kinetics.py  test_kinetics_asm.py  test_solvers_book.py  test_solvers_chromatography.py  test_solvers_illdefined.py  test_solvers_kinetics.py  test_solvers_linear.py  test_solvers_report.py  test_solvers_scientific.py  test_solvers_specials.py  test_solvers_spectroscopy.py
scifit/tests/features/ledspectrum/: led472spectrum.txt  led505spectrum.txt  led525spectrum.txt  led588spectrum.txt  led611spectrum.txt
scifit/tests/features/linear/: LinearCalibration.csv  linear.csv  parabolic.csv
scifit/tests/features/peaks/: TestChromatogramSolverSample00.csv  TestChromatogramSolverSample01.csv  TestChromatogramSolverSample02.csv  TestChromatogramSolverSample03.csv  peaks_01.csv
scifit/tests/features/raman/: 001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_0_0.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_0_1.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_0_2.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_0_3.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_0_4.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_1_0.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_1_1.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_1_2.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_1_3.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_1_4.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_2_0.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_2_1.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_2_2.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_2_3.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_2_4.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_3_0.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_3_1.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_3_2.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_3_3.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_3_4.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_4_0.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_4_1.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_4_2.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_4_3.txt  001_hBN+C_58_532nm_600grating_D0_30s_890cm-1_78%current_10mW_4_4.txt
scifit/tests/features/specials/: MichaelisMentenKinetic.csv
scifit/toolbox/: report.py
scifit/toolbox/resources/reports/: base.html  base.md  chromatography.md  fit.md  kinetic.md  references.bib
tests/: test_interfaces.py  test_solvers_linear.py
(+1 files in other folders)
