[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"
dynamic = ["dependencies"]

[project]
name = "scifit"
version = "v0.1"
description = "Scientific Fit for Python"
authors = [{ name = "Jean Landercy", email = "jeanlandercy@live.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
keywords = ["scientific", "curve-fitting", "optimization"]
requires-python = ">=3.10"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements_ci.txt"] }}

[project.optional-dependencies]
dev = ["nox", "black", "isort", "sphinx", "jupyter"]

[project.urls]
Homepage = "https://github.com/jlandercy/scifit"
