[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scifit"
version = "0.1.4"
description = "Scientific Fit for Python"
authors = [{ name = "Jean Landercy", email = "jeanlandercy@live.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Utilities",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["scientific", "curve-fitting", "optimization"]
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.7.2",
    "numpy>=1.25.2",
    "pandas>=2.0.3",
    "scipy>=1.11.1",
]

[project.optional-dependencies]
dev = [
    "alabaster>=0.7.12",
    "anybadge>=1.7.0",
    "appdirs>=1.4.4",
    "argcomplete>=1.12.2",
    "astroid>=2.4.2",
    "async-generator>=1.10",
    "attrs>=20.3.0",
    "bumpver>=2023.1126",
    "Babel>=2.9.0",
    "backcall>=0.2.0",
    "bandit>=1.7.0",
    "beautifulsoup4>=4.9.3",
    "black>=20.8b1",
    "bleach>=3.2.1",
    "certifi>=2020.12.5",
    "chardet>=4.0.0",
    "click>=7.1.2",
    "colorama>=0.4.4",
    "colorlog>=4.6.2",
    "commonmark>=0.9.1",
    "coverage>=5.3.1",
    "decorator>=4.4.2",
    "defusedxml>=0.6.0",
    "distlib>=0.3.1",
    "docutils>=0.16",
    "dparse>=0.5.1",
    "entrypoints>=0.3",
    "filelock>=3.0.12",
    "flake8>=3.8.4",
    "flake8-junit-report>=2.1.0",
    "furo>=2020.12.30b24",
    "gitdb>=4.0.5",
    "GitPython>=3.1.11",
    "idna>=2.10",
    "imagesize>=1.2.0",
    "importlib-metadata>=3.3.0",
    "ipykernel>=5.4.2",
    "ipython>=7.19.0",
    "ipython-genutils>=0.2.0",
    "isort>=5.7.0",
    "jedi>=0.18.0",
    "Jinja2>=2.11.2",
    "joblib>=1.0.0",
    "jsonschema>=3.2.0",
    "jupyter-client>=6.1.7",
    "jupyter-core>=4.7.0",
    "jupyterlab-pygments>=0.1.2",
    "lazy-object-proxy>=1.4.3",
    "lxml>=4.6.2",
    "m2r2>=0.2.7",
    "MarkupSafe>=1.1.1",
    "mccabe>=0.6.1",
    "mistune>=0.8.4",
    "mypy>=0.790",
    "mypy-extensions>=0.4.3",
    "nbclient>=0.5.1",
    "nbconvert>=6.0.7",
    "nbformat>=5.0.8",
    "nbsphinx>=0.8.0",
    "nest-asyncio>=1.4.3",
    "nox>=2020.12.31",
    "numpy>=1.19.4",
    "packaging>=20.8",
    "pandas>=1.2.0",
    "pandocfilters>=1.4.3",
    "parso>=0.8.1",
    "pathspec>=0.8.1",
    "pbr>=5.5.1",
    "pickleshare>=0.7.5",
    "pluggy>=0.13.1",
    "prompt-toolkit>=3.0.8",
    "py>=1.10.0",
    "pycodestyle>=2.6.0",
    "pyflakes>=2.2.0",
    "Pygments>=2.7.3",
    "pylint>=2.6.0",
    "pyparsing>=2.4.7",
    "pyproj>=3.0.0.post1",
    "pyrsistent>=0.17.3",
    "python-dateutil>=2.8.1",
    "pytz>=2020.5",
    "PyYAML>=5.3.1",
    "pyzmq>=20.0.0",
    "recommonmark>=0.7.1",
    "regex>=2020.11.13",
    "requests>=2.25.1",
    "safety>=1.10.1",
    "scikit-learn>=0.24.0",
    "scipy>=1.6.0",
    "six>=1.15.0",
    "smmap>=3.0.4",
    "snowballstemmer>=2.0.0",
    "soupsieve>=2.1",
    "Sphinx>=3.4.1",
    "sphinxcontrib-applehelp>=1.0.2",
    "sphinxcontrib-devhelp>=1.0.2",
    "sphinxcontrib-htmlhelp>=1.0.3",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=1.0.3",
    "sphinxcontrib-serializinghtml>=1.1.4",
    "stevedore>=3.3.0",
    "testpath>=0.4.4",
    "threadpoolctl>=2.1.0",
    "toml>=0.10.2",
    "tornado>=6.1",
    "tox>=3.20.1",
    "traitlets>=5.0.5",
    "typed-ast>=1.4.2",
    "typing-extensions>=3.7.4.3",
    "unittest-xml-reporting>=3.0.4",
    "urllib3>=1.26.2",
    "virtualenv>=20.2.2",
    "wcwidth>=0.2.5",
    "webencodings>=0.5.1",
    "wrapt>=1.12.1",
    "zipp>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/jlandercy/scifit"

[tool.bumpver]
current_version = "0.1.4"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Version change {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
# bumpver update --patch --dry
"pyproject.toml" = [
    'version = "{version}"',
]
"scifit/__init__.py" = [
    '__version__ = "{version}"',
]
"docs/source/conf.py" = [
    'release = "{version}"',
]
